<resources>
    <!-- 通用 -->
    <string name="app_name">微书</string>
    <string name="personal">我</string>
    <string name="small">小</string>
    <string name="middle">中</string>
    <string name="large">大</string>
    <string name="confirm">确定</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="cancel">取消</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>

    <string name="message">消息</string>
    <string name="contact">联系人</string>
    <string name="news">新闻</string>

    <string name="please_login">请登录</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="logout">退出登录</string>
    <string name="exit_app">退出微书</string>
    <string name="logout_confirm">确认退出登录</string>
    <string name="exit_confirm">确认退出微书</string>
    <string name="login_success">登录成功</string>
    <string name="login_account_or_password_wrong">账号或密码错误</string>
    <string name="login_failed">登录失败</string>
    <string name="kicked_out">被踢下线</string>

    <string name="please_register">请注册账号</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码:%1$d</string>
    <string name="account_registered">此账号已被注册</string>

    <string name="has_account">已有账号?</string>
    <string name="has_no_account">没有账号?</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_register_account_hint">请输入帐号，最多20位字母或者数字</string>
    <string name="account_format_wrong">帐号最多20位字母或者数字</string>
    <string name="please_register_nickname_hint">请输入昵称，最多10位汉字、字母或者数字</string>
    <string name="nickname_format_wrong">昵称必须为1~10位汉字、字母或者数字</string>
    <string name="please_register_password_hint">请输入密码，6~20位字母或者数字</string>
    <string name="please_register_password_repeat_hint">请再次输入密码</string>
    <string name="password_format_wrong">密码必须为6~20位字母或者数字</string>
    <string name="password_repeat_wrong">两次密码输入不同，请重新输入密码</string>

    <string name="status_network_is_not_available">当前网络不可用</string>
    <string name="status_unlogin">未登录</string>
    <string name="status_connecting">连接中…</string>
    <string name="status_logining">登录中…</string>

    <string name="new_friend">新的朋友</string>
    <string name="advanced_group">高级群</string>
    <string name="discussion_group">讨论组</string>
    <string name="black_list">黑名单</string>
    <string name="add_as_friend">加为好友</string>
    <string name="add_friend_request">添加好友请求发送成功</string>
    <string name="add_friend_success">添加好友成功</string>
    <string name="can_not_add_self">不能加自己为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="friend_count">%1$d位联系人</string>
    <string name="send_message">发消息</string>
    <string name="send">发送</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>

    <string name="search">搜索</string>
    <string name="add_new_friend">添加朋友</string>
    <string name="details">详细资料</string>
    <string name="prepare_data">正在准备数据…</string>

    <string name="self_details">个人信息</string>
    <string name="head_image">头像</string>
    <string name="nickname">昵称</string>
    <string name="weishu_account">微书号</string>
    <string name="weishu_account_is">微书号：%1$s</string>
    <string name="change_name">更改名字</string>
    <string name="update_success">更新成功</string>
    <string name="update_failed">更新失败</string>

    <string name="no_session_record">暂无聊天记录</string>
    <string name="readed">已读</string>

    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>

    <string name="photo_album">相册</string>
    <string name="no_photo">您的相册没有照片</string>
    <string name="crop_photo">裁剪</string>

    <string name="user_info_update_success">用户信息更新成功</string>
    <string name="user_info_update_failed">用户信息更新失败</string>
    <string name="user_info_update_cancel">取消用户信息更新</string>
    <string name="head_upload_success">头像上传成功</string>
    <string name="head_upload_failed">头像上传失败</string>
    <string name="head_update_success">头像更新成功</string>
    <string name="head_update_failed">头像更新失败</string>

    <string name="all_albums">所有相册</string>
    <string name="photo_count">%1$s张</string>
    
    <string name="stick_top_chat">置顶聊天</string>
    <string name="cancel_stick_top_chat">取消置顶</string>
    <string name="delete_chat">删除聊天</string>
    <string name="is_resent">是否重新发送</string>
    <string name="message_notify">接收新消息通知</string>
    <string name="ring">声音</string>
    <string name="vibrate">震动</string>
    <string name="transfer_animation">转场动画</string>
    <string name="night_mode">夜间模式</string>
    <string name="use_native_crop">系统裁剪</string>
    <string name="clear_message_record">清空聊天记录</string>
    <string name="is_clear_message_record">是否清空所有聊天记录</string>
    <string name="clear_message_record_done">聊天记录已清除</string>
    <string name="scan_one">扫一扫</string>
    <string name="zhihu_daily">知乎日报</string>
    <string name="developer">开发者</string>
    <string name="shopping">购物</string>
    <string name="music">音乐</string>
    <string name="browser">浏览器</string>
    <string name="game">游戏</string>
    <string name="press_to_voice">按住说话</string>
    <string name="about_weishu">关于微书</string>
    <string name="setting">设置</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    
    <string name="num_reply">%1$s跟帖</string>
    <string name="loading">正在加载…</string>
    <string name="click_and_refresh">点击刷新</string>
    <string name="refresh_failed_and_retry">加载失败,点击重试</string>
    <string name="netease_news">网易新闻</string>
    <string name="discovery">发现</string>

    <string name="start_group_chat">发起群聊</string>
    <string name="add_friend">添加朋友</string>
    <string name="help_and_feedback">帮助和反馈</string>
    <string name="no_data">无数据</string>
    <string name="data_updated">已更新</string>
    <string name="open">打开</string>

    <string name="close_background">退出到后台</string>

    <!-- 排序 -->
    <string name="function_has_not_developed">功能尚未开发</string>
    <string name="system_not_support">您的操作系统不支持</string>
    <string name="origin_data_show">原始数据：</string>
    <string name="sort_result_show">排序结果：</string>
    <string name="origin_data">原始数据</string>
    <string name="sort_start">开始排序</string>
    <string name="initializing">正在初始化数据…</string>
    <string name="sorting">正在排序…</string>
    <string name="current_algorithm">当前算法: %1$s</string>
    <string name="time_consuming">耗时：%1$d 毫秒</string>
    <string name="sort">排序算法</string>
    <string name="algorithm">算法</string>
    <string name="bubble_sort">冒泡排序</string>
    <string name="simple_selection_sort">选择排序</string>
    <string name="straight_insertion_sort">插入排序</string>
    <string name="shell_sort">希尔排序</string>
    <string name="fast_sort">快速排序</string>
    <string name="heap_sort">堆排序</string>
    <string name="merging_sort">归并排序</string>
    <string name="data_is_too_large_to_show">已完成，但数据量太大，不做显示</string>

    <!--遍历-->
    <string name="traverse">遍历</string>
    <string name="pre_traverse">前序遍历</string>
    <string name="in_traverse">中序遍历</string>
    <string name="post_traverse">后序遍历</string>

    <!-- SurfaceView -->
    <string name="rebroadcast">重播</string>

    <!-- 关于 -->
    <string name="weishu_version">微书 %1$s</string>
    <string name="weishu_brief">
        &#160;&#160;&#160;&#160;
        这是我在业余时间开发的应用，后期会持续的进行维护和增加新功能。\n
        &#160;&#160;&#160;
        感谢我的女朋友一直以来的支持和体谅，她是微书的最大贡献者。</string>
    <string name="weishu_brief2">
        &#160;&#160;&#160;&#160;
        这是我在工作之余开发的Android应用，主要用于学习和实践开发技能，后期会持续的进行维护和增加新功能，敬请期待。
    </string>
    <string name="weishu_me">
        &#169;2016 微书\n作者:高伟&#160;&#160;微书号<u>gwblue</u>
    </string>
    <string name="add_author">添加作者为好友</string>
    <string name="author_is_your_friend">作者已是您的好友</string>

</resources>
