<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <include layout="@layout/include_toolbar" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:id="@+id/fragment_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weishu_version"
            android:textColor="@color/mainTextColorGray"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/weishu_brief2"/>

        <ImageView
            android:layout_width="220dp"
            android:layout_height="match_parent"
            android:src="@drawable/me_photo"/>
    </LinearLayout>
    <TextView
        android:id="@+id/fragment_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/weishu_me"
        android:textColor="@color/mainTextColorGray"
        android:gravity="center"
        android:textSize="15sp"/>
</LinearLayout>
