<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_itemFragment">

    <include layout="@layout/include_toolbar" />

    <FrameLayout
        android:id="@+id/fragment_self_container_head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/bg_press_item_normal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/head_image"
            android:textSize="15sp"/>

        <com.garfield.weishu.ui.view.HeadImageView
            android:id="@+id/fragment_self_head_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|end"
            android:scaleType="centerCrop" />

        <View
            style="@style/horizontal_divider"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_self_container_nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/bg_press_item_normal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nickname"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/fragment_self_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:textColor="@color/mainTextColorGray"
            android:textSize="15sp"/>
        <View
            style="@style/horizontal_divider"
            android:layout_gravity="bottom"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_self_container_weishu_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:clickable="true"
        android:background="@drawable/bg_press_item_normal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/weishu_account"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/fragment_self_weishu_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:textColor="@color/mainTextColorGray"
            android:textSize="15sp"/>
        <View
            style="@style/horizontal_divider"
            android:layout_gravity="bottom" />
    </FrameLayout>

</LinearLayout>