<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <GridView
            android:id="@+id/fragment_take_photo_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"
            android:numColumns="3">
        </GridView>

        <TextView
            android:id="@+id/fragment_take_photo_no_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_photo"
            android:textSize="16sp"
            android:textColor="@color/black_gray"
            android:visibility="gone"/>

        <FrameLayout
            android:id="@+id/fragment_take_photo_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_take_photo_bar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryTrans">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/fragment_take_photo_album"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/all_albums"
                    android:drawableRight="@drawable/ic_album_check_selector"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_take_photo_use_native_crop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="end"
                android:padding="10dp">
                <com.garfield.baselib.ui.widget.SwitchButton
                    android:id="@+id/fragment_take_photo_use_native_crop_check"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    myView:switchOnImage="@drawable/ic_checked"
                    myView:switchOffImage="@drawable/ic_unchecked">
                </com.garfield.baselib.ui.widget.SwitchButton>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/use_native_crop"
                    android:textSize="14sp"/>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_take_photo_album_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/fragment_take_photo_bar">
            <ListView
                android:id="@+id/fragment_take_photo_album_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@color/white"
                android:divider="@null">
            </ListView>
        </FrameLayout>

    </RelativeLayout>

</LinearLayout>